# para-speak

./: .env  .gitignore  APP_STAT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  para-speak
crates/core/audio/: Cargo.toml
crates/core/audio/src/: audio_recorder.rs  audio_resampler.rs  conversion.rs  dynamic_buffer.rs  error.rs  lib.rs  ring_buffer.rs  sound_player.rs
crates/core/clipboard/: Cargo.toml
crates/core/clipboard/src/: lib.rs
crates/core/config/: Cargo.toml
crates/core/config/src/: available_models.rs  config.rs  lib.rs  parse_replace_pairs.rs
crates/core/log/: Cargo.toml
crates/core/log/src/: init.rs  lib.rs
crates/core/ml-core/: Cargo.toml
crates/core/ml-core/src/: lib.rs  ml_engine.rs  ml_engine_native.rs  ml_error.rs  model_utils.rs  text_manipulation.rs  transcription_service.rs
crates/core/ml-utils/: Cargo.toml
crates/core/ml-utils/src/: lib.rs  model_support.rs
crates/core/shortcut-matcher/: Cargo.toml
crates/core/shortcut-matcher/src/: conflict_resolver.rs  engine.rs  error.rs  handler.rs  lib.rs  matcher.rs  parser.rs  types.rs
crates/core/shortcut-matcher/src/patterns/: combo.rs  double.rs  mod.rs  single.rs
crates/core/shortcut-matcher/tests/: basic_tests.rs  conflict_tests.rs  fixtures.rs  test_ambiguous_expansion.rs
crates/core/test-utils/: Cargo.toml
crates/core/test-utils/src/: lib.rs  test_config_utils.rs
crates/integrations/cli/: Cargo.toml
crates/integrations/cli/src/: app.rs  lib.rs  main.rs  memory_monitor.rs  model_verification.rs  panic_handler.rs  permissions.rs  registry.rs
crates/integrations/cli/src/controller/: controllers.rs  mod.rs
crates/integrations/cli/tests/: integration_test.rs  mocks.rs
crates/integrations/components/: Cargo.toml
crates/integrations/components/src/: audio.rs  error.rs  focus_detector.rs  lib.rs  overlay.rs  smart_collector.rs  spotify.rs  traits.rs  transcription_handler.rs  transcription_observer.rs
crates/integrations/focus-detector/: Cargo.toml  build.rs
crates/integrations/focus-detector/src/: lib.rs
crates/integrations/shortcut-listener/: Cargo.toml
crates/integrations/shortcut-listener/src/: lib.rs  shortcut_listener.rs
crates/integrations/ui/: Cargo.toml
crates/integrations/ui/src/: app.rs  lib.rs  macos.rs  main.rs
crates/integrations/verify-cli/: Cargo.toml
crates/integrations/verify-cli/src/: main.rs  model_download.rs  model_list.rs  python_env.rs
python/: ml_daemon.py  requirements.txt  setup_env.sh
python/models/: base_model.py  canary_model.py  model_factory.py  parakeet_model.py
python/requirements/: base.txt  canary.txt  parakeet.txt
