[workspace]
members = [
    "crates/core/audio",
    "crates/core/shortcut-matcher",
    "crates/core/clipboard",
    "crates/integrations/components",
    "crates/core/config",
    "crates/core/log",
    "crates/core/test-utils",
    "crates/core/ml-core",
    "crates/core/ml-utils",
    "crates/integrations/focus-detector",
    "crates/integrations/shortcut-listener",
    "crates/integrations/cli",
    "crates/integrations/verify-cli",
    "crates/integrations/ui",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
# Core Rust dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
log = "0.4.27"

# System interaction
rdev = { version = "0.5.3", features = ["unstable_grab"] }
arboard = "3.6.1"

# Audio
cpal = "0.16.0"
hound = "3.5.1"

# Concurrency
crossbeam-channel = "0.5.15"
parking_lot = "0.12.1"

# Error handling
thiserror = "2.0"

# Graphics/UI
pixels = "0.13.0"
winit = "0.28.7"
instant = "0.1.13"
env_logger = "0.11.8"
screenshots = "0.8.10"
egui = "0.32.3"
eframe = "0.32.3"

# Python integration
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
numpy = "0.25.0"

# macOS specific
objc2 = "0.6.2"
objc2-foundation = { version = "0.3.1", features = ["NSString", "NSArray", "NSURL", "NSAutoreleasePool", "NSObject"] }
objc2-app-kit = { version = "0.3.1", features = ["NSWorkspace", "NSRunningApplication", "NSWindow", "NSView", "NSApplication"] }
objc2-accessibility = { version = "0.3.1", features = ["AXFoundation"] }
objc2-core-foundation = { version = "0.3.1", features = ["CFString", "objc2"] }

# Windows specific
# windows = { version = "0.61.3", features = [
#    "Win32_Foundation",
#    "Win32_System_Com",
#    "Win32_System_Threading",
#    "Win32_System_ProcessStatus",
#    "Win32_UI_WindowsAndMessaging",
#    "Win32_UI_Accessibility"
#] }
