[package]
name = "ml-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
config = { path = "../config" }
ml-utils = { path = "../ml-utils" }
aho-corasick = "1.1"
pyo3 = { workspace = true }
numpy = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }


[build-dependencies]
pyo3-build-config = "0.25.1"