[package]
name = "ml-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
config = { path = "../config" }
ml-utils = { path = "../ml-utils" }
audio = { path = "../audio" }
aho-corasick = "1.1"
thiserror = { workspace = true }
para-log = { path = "../log", package = "log" }
transcribe-rs = { version = "0.1.0" }
hound = { workspace = true }