[package]
name = "components"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = "1.0"
audio = { path = "../../core/audio" }
clipboard = { path = "../../core/clipboard" }
config = { path = "../../core/config" }
focus-detector = { path = "../focus-detector" }
indicatif = "0.17"
log = { path = "../../core/log" }
ml-core = { path = "../../core/ml-core" }
thiserror = "2.0"