[package]
name = "focus-detector"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]

# [target.'cfg(target_os = "windows")'.dependencies]
# windows = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-accessibility = { workspace = true }
objc2-core-foundation = { workspace = true }